data/forge_javadoc/1.7.10/raw/net/minecraft/client/settings/KeyBinding.md
---
title: "KeyBinding"
description: "public class KeyBinding extends java.lang.Object implements java.lang.Comparable"
package: "net/minecraft/client/settings"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/settings/KeyBinding.html"
sourceType: javadoc
---

# KeyBinding

**Inheritance:** java.lang.Object → net.minecraft.client.settings.KeyBinding

## Class signature

```java
public class KeyBinding extends java.lang.Object implements java.lang.Comparable
```

## Constructors

- `KeyBinding(java.lang.String p_i45001_1_, int p_i45001_2_, java.lang.String p_i45001_3_)`

## Methods

- `int compareTo(KeyBinding p_compareTo_1_)`
- `int compareTo(java.lang.Object p_compareTo_1_)`
- `boolean getIsKeyPressed()`
- `static java.util.Set getKeybinds()`
- `java.lang.String getKeyCategory()`
- `int getKeyCode()`
- `int getKeyCodeDefault()`
- `java.lang.String getKeyDescription()`
- `boolean isPressed()`
- `static void onTick(int p_74507_0_)`
- `static void resetKeyBindingArrayAndHash()`
- `static void setKeyBindState(int p_74510_0_, boolean p_74510_1_)`
- `void setKeyCode(int p_151462_1_)`
- `static void unPressAllKeys()`
